<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akinn.timebots.ScanActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBgLogo"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/small_logo" />
        </FrameLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewEmpIdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/emp_id" />

                <TextView
                    android:id="@+id/textViewEmpId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="111111" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewEmpNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/emp_name" />

                <TextView
                    android:id="@+id/textViewEmpName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="รัฐกานต์ วาทย์ชีรานนท์" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewLastCheckInLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/scan_in" />

                <TextView
                    android:id="@+id/textViewLastCheckIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="28-Oct-2017 18:06" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/cameraPreview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader" />

    <ImageView
        android:id="@+id/imageViewLive"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@android:color/transparent" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLive"
        android:gravity="top"
        android:ems="10"
        android:background="@drawable/multiline_edit_text"
        android:hint="@string/scan_hint"
        android:inputType="textMultiLine" />


    <ImageButton
        android:id="@+id/buttonCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextComment"
        android:visibility="invisible"
        android:src="@drawable/ic_camera" />

    <Button
        android:id="@+id/buttonCheckIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextComment"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="20sp"
        android:text="@string/scan_button"
        android:background="@color/colorTakePicture" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Large"
        android:id="@+id/progressUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:id="@+id/layoutButtonExitLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCheckIn">
        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/buttonLogout"
            android:textSize="20sp"
            android:text="@string/menu_exit"
            android:background="@color/colorMenuExit" />
        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:text="@string/logout_submit"
            android:background="@color/colorLogout" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutButtonExitLogout"
        android:visibility="invisible"
        android:text="(0,0)" />

</android.support.constraint.ConstraintLayout>
